<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AllowAccessActivity"
    android:background="@color/allow_access_color"
    android:padding="20dp"
    android:orientation="vertical">
    <ImageView
        android:layout_width="170dp"
        android:layout_height="170dp"
        android:id="@+id/allowIcon"
        android:src="@drawable/allowaccess"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/text_access1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/allowIcon"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/Text_1"
        android:textColor="@color/white"
        android:textSize="40sp" />

    <TextView
        android:id="@+id/text_access2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_access1"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/Text_2"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <Button
        android:id="@+id/allowAccessButton"
        android:layout_width="480dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/colorAllowAccessButton"
        android:padding="8dp"
        android:text="@string/allow_access_button"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp" />


</RelativeLayout>