<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:padding="10dp"
    android:background="?attr/selectableItemBackground">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:src="@drawable/foldericon" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/folderName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:text="@string/folder_name_title"
                android:textColor="@color/list_item_textColor1"
                android:textSize="17sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/folderPath"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="2"
                android:text="@string/folder_path"
                android:textColor="@color/list_item_textColor2"
                android:textSize="17sp"
                android:textStyle="italic" />
            <!--ellipsize will show dots at the end of second line-->
            <TextView
                android:id="@+id/noOfFiles"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_of_files_default"
                android:textColor="@color/list_item_textColor3"
                android:textSize="17sp" />
        </LinearLayout>
    </LinearLayout>


</RelativeLayout>