<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/selectableItemBackground"
    android:orientation="horizontal">

    <androidx.cardview.widget.CardView
        android:id="@+id/thumbnail_card"
        android:layout_marginStart="8dp"
        android:layout_width="112dp"
        android:layout_height="62dp"
        app:cardCornerRadius="3dp"
        android:layout_centerVertical="true"
        android:backgroundTint="@color/itemBackground">

        <ImageView

            android:id="@+id/thumbnail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_audioitem_clipart" />

        <TextView
            android:id="@+id/media_duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:background="@color/light_dark"
            android:padding="4dp"
            android:text="@string/time_text"
            android:textStyle="bold"
            android:textColor="@color/fileItemText1"
            android:textSize="12sp" />
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_margin="5dp"
        android:padding="10dp"

        android:layout_toStartOf="@+id/media_menu_more"
        android:layout_toEndOf="@+id/thumbnail_card"
        android:orientation="vertical">

        <TextView
            android:id="@+id/media_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:ellipsize="end"
            android:maxLines="2"
            android:text="@string/media_file_name"
            android:textColor="@color/fileItemText2" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/media_size"
            android:text="@string/size"
            android:textColor="@color/fileItemText3"/>

    </LinearLayout>

    <ImageView
        android:id="@+id/media_menu_more"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:foregroundTint="@color/light_dark"
        android:src="@drawable/ic_more" />

</RelativeLayout>