<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
<!--            android:background="@color/black">-->
    <RelativeLayout
        android:id="@+id/root_layout_audio"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/toolbar_player_audio"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:visibility="visible">

            <ImageView
                android:id="@+id/audio_back_audio"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_centerVertical="true"
                android:padding="10dp"
                android:src="@drawable/ic_back" />

            <TextView
                android:id="@+id/playlistTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toStartOf="@id/audio_list"
                android:layout_toEndOf="@id/audio_back_audio"
                android:ellipsize="end"
                android:maxLines="2"
                android:text="@string/this_is_title_of_video"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/audio_list"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="20dp"
                android:layout_toStartOf="@id/audio_more"
                android:src="@drawable/ic_playlist" />

            <ImageView
                android:id="@+id/audio_more"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_more_white" />
        </RelativeLayout>

        <!--        <androidx.recyclerview.widget.RecyclerView-->
        <!--            android:id="@+id/recyclerView_icon"-->
        <!--            android:layout_width="wrap_content"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:layout_below="@id/toolbar_player"-->
        <!--            android:layout_alignParentStart="true" />-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/bottom_icons_audio"
            android:orientation="vertical">

            <TextView
                android:id="@+id/audiofile_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginBottom="8dp"
                android:ellipsize="end"
                android:maxLines="2"
                android:text="@string/this_is_title_of_video"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <RelativeLayout
                android:id="@+id/progress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="visible">

                <!--                android:layout_above="@id/bottom_icons"-->

                <TextView
                    android:id="@+id/exo_position"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="10dp"
                    android:text="@string/_5555"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/exo_duration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="10dp"
                    android:text="@string/_4444"
                    android:textColor="@color/white" />

                <com.google.android.exoplayer2.ui.DefaultTimeBar
                    android:id="@+id/exo_progress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toStartOf="@id/exo_duration"
                    android:layout_toEndOf="@id/exo_position"
                    app:played_color="@color/purple_200"
                    app:scrubber_drawable="@drawable/scrubber" />

            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/bottom_icons_audio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerInParent="true"
            android:layout_marginBottom="5dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="7">


            <ImageView
                android:id="@+id/exo_rew"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:src="@drawable/ic_rewind" />

            <ImageView
                android:id="@+id/exo_prev"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:src="@drawable/ic_previous" />

            <ImageView
                android:id="@+id/exo_play"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:src="@drawable/ic_play" />

            <ImageView
                android:id="@+id/exo_pause"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:src="@drawable/ic_pause" />

            <ImageView
                android:id="@+id/exo_next"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:src="@drawable/ic_next" />

            <ImageView
                android:id="@+id/exo_ffwd"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:src="@drawable/ic_forward" />


        </LinearLayout>
    </RelativeLayout>


</RelativeLayout>